# Palantir

./: .env  .gitignore  CMakeLists.txt  README.md  docker-compose.yml  palantir.cfg
.github/workflows/: cmake.yml
docker/: Dockerfile
src/: cache.cpp  cache.h  dispatcher.cpp  dispatcher.h  main.cpp  net.cpp  net.h  palantir.hpp  scraper.cpp  scraper.h
tests/: CMakeLists.txt  tests.cpp
